--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
 			<img src="BDCLogoBetter.svg" alt="" height=30%>
 			<h1>Big Data Club</h1>
 			<p> Meetings every Monday at 6.30 PM in CoC 017 </p>
-			<a href="https://github.com/gt-big-data"><i class="fa fa-github fa-3x"></i></a>
-			<a href="https://www.facebook.com/gtbigdataclub"><i class="fa fa-facebook fa-3x"></i></a>
+			<a href="https://github.com/gt-big-data/"><i class="fa fa-github fa-3x"></i></a>
+			<a href="https://www.facebook.com/gtbigdataclub/"><i class="fa fa-facebook fa-3x"></i></a>
+			<a href="https://bigdataclub.slack.com/"><i class="fa fa-slack fa-3x"></i></a>
 		</div>
 
 		<div class="page" id="about">
