--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
 			<h1>Big Data Club</h1>
 			<p> Meetings every Monday at 6.30 PM in CoC 017 </p>
 			<a href="https://github.com/gt-big-data/"><i class="fa fa-github fa-3x"></i></a>
+			<a href="https://twitter.com/gtbigdataclub"><i class="fa fa-twitter fa-3x"></i></a>
 			<a href="https://www.facebook.com/gtbigdataclub/"><i class="fa fa-facebook fa-3x"></i></a>
 			<a href="https://bigdataclub.slack.com/"><i class="fa fa-slack fa-3x"></i></a>
+			<a href="mailto:gtbigdata@gmail.com"><i class="far fa-envelope fa-3x"></i></a>
 		</div>
 
 		<div class="page" id="about">
