Added pictures to cards

--- a/index.html
+++ b/index.html
@@ -97,38 +97,48 @@
 				<br>
 				<div class="card-columns">
 					<div class="card">
+						<img src="images/comment_communities.png" alt="" class="card-img-top">
 						<div class="card-body">
-							<h4><a href="https://github.com/gt-big-data/ApiAndCrawler">Twitter Insights</a></h4>
+							<h4 class="card-title"><a href="https://github.com/gt-big-data/ApiAndCrawler">Reddit Comment Communities</a></h4>
 							Our current project. Long- term project analyzing the differences in Twitter semantics between different regions.
 						</div>
 					</div>
 					<div class="card">
 						<div class="card-body">
-							<h4><a href="https://github.com/gt-big-data/movie-lens">Movie Recommendation Website</a></h4>
+							<h4 class="card-title"><a href="https://github.com/gt-big-data/ApiAndCrawler">Twitter Insights</a></h4>
+							Our current project. Long- term project analyzing the differences in Twitter semantics between different regions.
+						</div>
+					</div>
+					<div class="card">
+						<div class="card-body">
+							<h4 class="card-title"><a href="https://github.com/gt-big-data/movie-lens">Movie Recommendation Website</a></h4>
 							Still looking for the right movie to watch next? This application will compare your tastes with a database of hundreds of other users to recommend you something new.
 						</div>
 					</div>
 					<div class="card">
 						<div class="card-body">
-							<h4><a href="http://retinanews.net">Retina News</a></h4>
+							<h4 class="card-title"><a href="http://retinanews.net">Retina News</a></h4>
 							Web application that organizes news articles to serve them intelligently to the user. Aggregates headlines and articles from a variety of sources, and personalizes delivery of these articles.
 						</div>
 					</div>
 					<div class="card">
+						<img src="images/pikachu.png" alt="" class="card-img-top">
 						<div class="card-body">
-							<h4><a href="https://gt-big-data.github.io/plottablejs-tutorial/">Visualizing Pokemon Stats</a></h4>
+							<h4 class="card-title"><a href="https://gt-big-data.github.io/plottablejs-tutorial/">Visualizing Pokemon Stats</a></h4>
 							D3.js visualization of all first generation Pokemon, grouping, graphing and comparing them by their base stats.
 						</div>
 					</div>
 					<div class="card">
+						<img src="images/super_bowl.png" alt="" class="card-img-top">
 						<div class="card-body">
-							<h4><a href="https://gt-big-data.github.io/SuperBowl2014/">Tweet Visualization </a></h4>
+							<h4 class="card-title"><a href="https://gt-big-data.github.io/SuperBowl2014/">Tweet Visualization </a></h4>
 							See how the Twitter feed of thousands of users changed from moment to moment during the 2014 Super Bowl.
 						</div>
 					</div>
 					<div class="card">
+						<img src="images/map.png" alt="" class="card-img-top">
 						<div class="card-body">
-							<h4><a href="https://github.com/gt-big-data/twitter-dashboard">Realtime Twitter Dashboard</a></h4>
+							<h4 class="card-title"><a href="https://github.com/gt-big-data/twitter-dashboard">Realtime Twitter Dashboard</a></h4>
 							Visualizing Tweets across the world in real time.
 						</div>
 					</div>
