Minified CSS, used optimized images and more SEO stuff

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
-	<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
+	<meta charset="UTF-8">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://opensource.keycdn.com/fontawesome/4.7.0/font-awesome.min.css" integrity="sha384-dNpIIXE8U05kAbPhy3G1cz+yZmTzA6CY8Vg/u2L9xRnHjJiAK76m2BIEaSEV+/aU" crossorigin="anonymous">
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="style.min.css">
 	<title>GT Big Data Club</title>
 	<link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="96x96" href="favicon/favicon-96x96.png">
@@ -13,7 +14,6 @@
 	<meta name="msapplication-TileColor" content="#FFF">
 	<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
 	<meta name="theme-color" content="#FFF">
-	<meta charset="UTF-8">
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="78">
 	<nav class="navbar navbar-expand-md bg-dark navbar-dark sticky-top">
@@ -48,7 +48,7 @@
 		<div class="container-fluid">
 			<br>
 			<br>
-			<img src="BDCLogoBetter.svg" alt="" height=30%>
+			<img src="BDCLogoBetter.svg" alt="Big Data logo" height="30%">
 			<h1>Big Data Club</h1>
 			<h3> Meetings every <b>Monday</b> at <b>6.30 PM</b> in <b>CoC 017</b> </h3>
 			<a href="https://github.com/gt-big-data/"><i class="fa fa-github fa-3x"></i></a>
@@ -76,7 +76,7 @@
 				<br>
 				<div class="card-columns">
 					<div class="card">
-						<img src="images/comment_communities.png" alt="" class="card-img-top">
+						<img src="images/comment_communities.png" alt="Reddit Comment Communities" class="card-img-top">
 						<div class="card-body">
 							<h4 class="card-title"><a href="https://gt-big-data.github.io/comment-communities/">Reddit Comment Communities</a></h4>
 							Visualize how different comment threads on Reddit are growing in real time with D3.js
