Changed the about page. Added a google form for the mailing list

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://opensource.keycdn.com/fontawesome/4.7.0/font-awesome.min.css" integrity="sha384-dNpIIXE8U05kAbPhy3G1cz+yZmTzA6CY8Vg/u2L9xRnHjJiAK76m2BIEaSEV+/aU" crossorigin="anonymous">
-	<link rel="stylesheet" href="style.min.css">
+	<link rel="stylesheet" href="style.css">
 	<title>GT Big Data Club</title>
 	<link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="96x96" href="favicon/favicon-96x96.png">
@@ -32,7 +32,7 @@
 					<a class="nav-link scroll" href="#home">Home</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link scroll" href="#about">About</a>
+					<a class="nav-link scroll" href="#about">About Us</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link scroll" href="#projects">Projects</a>
@@ -61,12 +61,21 @@
 
 		<div class="jumbotron jumbotron-fluid page2" id="about">
 			<div class="container-fluid">
-				<h2>About</h2>
+				<h2>About Us</h2>
 				<p>We are a student organization of the College Of Computing at Georgia Tech.</p>
-
-				<p>We work on projects set by the group related to Big Data.
-				No skill is needed to join the Org, and there are no membership dues.</p>
-				<p> Make sure to check out our previous projects, sign up to our email list and see what we plan for the 2017-2018 academic year!</p>
+				<p>Our goal is to teach members about Big Data: </p>
+				<ul class="mainlist">
+					<li>What it is</li>
+					<li>Where it comes from</li>
+					<li>How we can collect and aggregate it</li>
+					<li>How we can analyze it</li>
+					<li>How we can visualize it</li>
+				</ul>
+				<p>We choose a project as a club and then separate into teams to work on
+				the 3 aspects of Big Data (collection, analysis, visualization).</p>
+				<p>No skills or previous experience is required and there are no membership dues.</p>
+				<p>Make sure to check out our previous projects and sign up for our email list to see what we plan for the 2018-2019 academic year!</p>
+				<a class="btn-primary btn-lg" href="https://docs.google.com/forms/d/e/1FAIpQLSdniaHMLCcwmMlwaClrS2-YEpe9w7OPcRqr2nuhx-baTlnvkw/viewform?usp=sf_link">Sign Up for Our Mailing List!</a>
 			</div>
 		</div>
 
