--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 		<div class="container-fluid">
 			<br>
 			<br>
-			<img src="BDCLogoBetter.svg" alt="Big Data logo" height="30%">
+			<img src="BDCLogo.svg" alt="Big Data logo" width="30%">
 			<h1>Big Data Club</h1>
 			<h3> Meetings every <b>Monday</b> at <b>6.30 PM</b> in <b>CoC 017</b> </h3>
 			<a href="https://github.com/gt-big-data/"><i class="fa fa-github fa-3x"></i></a>
