Downloaded local svgs of all icons and fixed links

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
-	<link rel="stylesheet" href="https://opensource.keycdn.com/fontawesome/4.7.0/font-awesome.min.css" integrity="sha384-dNpIIXE8U05kAbPhy3G1cz+yZmTzA6CY8Vg/u2L9xRnHjJiAK76m2BIEaSEV+/aU" crossorigin="anonymous">
 	<link rel="stylesheet" href="style.css">
 	<title>GT Big Data Club</title>
 	<link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
@@ -51,11 +50,11 @@
 			<img src="BDCLogo.svg" alt="Big Data logo" width="30%">
 			<h1>Big Data Club</h1>
 			<h3> Meetings every <b>Monday</b> at <b>6.30 PM</b> in <b>CoC 017</b> </h3>
-			<a href="https://github.com/gt-big-data/"><i class="fa fa-github fa-3x"></i></a>
-			<a href="https://bigdataclub.slack.com/"><i class="fa fa-slack fa-3x"></i></a>
-			<a href="https://www.facebook.com/gtbigdataclub/"><i class="fa fa-facebook fa-3x"></i></a>
-			<a href="mailto:gtbigdata@gmail.com"><i class="fa fa-envelope fa-3x"></i></a>
-			<a href="https://twitter.com/gtbigdataclub"><i class="fa fa-twitter fa-3x"></i></a>
+			<a class="iconlink" href="https://github.com/gt-big-data/"><img src="icons/github.svg" width="8%"></a>
+			<a href="https://bigdataclub.slack.com/"><img src="icons/slack.svg" width="8%"></a>
+			<a class="iconlink" href="https://www.facebook.com/gtbigdataclub/"><img src="icons/facebook.svg" width="8%"></a>
+			<a class="iconlink" href="mailto:gtbigdata@gmail.com"><img src="icons/envelope.svg" width="8%"></a>
+			<a class="iconlink" href="https://twitter.com/gtbigdataclub"><img src="icons/twitter.svg" width="8%"></a>
 		</div>
 	</div>
 
