--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 			<a href="https://github.com/gt-big-data/"><i class="fa fa-github fa-3x"></i></a>
 			<a href="https://bigdataclub.slack.com/"><i class="fa fa-slack fa-3x"></i></a>
 			<a href="https://www.facebook.com/gtbigdataclub/"><i class="fa fa-facebook fa-3x"></i></a>
-			<a href="mailto:gtbigdata@gmail.com"><i class="fa fa-envelope fa-3x"></i></a>
+			<a href="mailto:contact@gtbigdata.club"><i class="fa fa-envelope fa-3x"></i></a>
 			<a href="https://twitter.com/gtbigdataclub"><i class="fa fa-twitter fa-3x"></i></a>
 		</div>
 	</div>
