--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
 	<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 	<link rel="stylesheet" href="style.min.css">
-	<title>GT Big Data Club</title>
+	<title>Big Data Big Impact</title>
 	<link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="96x96" href="favicon/favicon-96x96.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
@@ -18,7 +18,7 @@
 <body data-spy="scroll" data-target=".navbar" data-offset="78">
 	<nav class="navbar navbar-expand-md bg-dark navbar-dark sticky-top">
 		<!-- Brand -->
-		<a class="navbar-brand scroll" href="#">Big Data Club</a>
+		<a class="navbar-brand scroll" href="#">Big Data Big Impact</a>
 
 		<!-- Toggler/collapsibe Button -->
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -49,7 +49,7 @@
 			<br>
 			<br>
 			<img src="BDCLogo.svg" alt="Big Data logo" height="300px">
-			<h1>Big Data Club</h1>
+			<h1>Big Data Big Impact</h1>
 			<h3> Meetings every <b>Monday</b> at <b>6:30 PM</b> in <b>CoC 101</b> </h3>
 			<a href="https://github.com/gt-big-data/"><i class="fa fa-github fa-3x"></i></a>
 			<a href="https://bigdataclub.slack.com/"><i class="fa fa-slack fa-3x"></i></a>
@@ -64,9 +64,9 @@
 				<h2>About</h2>
 				<p>We are a student organization of the College Of Computing at Georgia Tech.</p>
 
-				<p>We work on projects set by the group related to Big Data.
+				<p>We are an educational project-based organization focused on using data pipelining, analysis, and visualization techniques to make social impact.
 				No skill is needed to join the Org, and there are no membership dues.</p>
-				<p> Make sure to check out our previous projects, sign up to our email list and see what we plan for the 2018-2019 academic year!</p>
+				<p> Make sure to check out our previous projects, sign up to our email list and see what we plan for the 2019-2020 academic year!</p>
 			</div>
 		</div>
 
