change pipelining to collection

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 				<h2>About</h2>
 				<p>We are a student organization of the College Of Computing at Georgia Tech.</p>
 
-				<p>We are an educational project-based organization focused on using data pipelining, analysis, and visualization techniques to make social impact.
+				<p>We are an educational project-based organization focused on using data collection, analysis, and visualization techniques to make a social impact.
 				No skill is needed to join the Org, and there are no membership dues.</p>
 				<p> Make sure to check out our previous projects, sign up to our email list and see what we plan for the 2019-2020 academic year!</p>
 			</div>
